--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                     <span>Donations</span>
                                 </a>
                                 <ul class="sub-menu" aria-expanded="false">
-																																<li><a href="donation_create.php">Create</a></li>
+			<li><a href="donation_create.html">Create</a></li>																											<li><a href="donation_create.php">Create</a></li>
                                     <li><a href="donation_list.php">View/Update</a></li>
                                 </ul>
                             </li>
